--- a/entry.html
+++ b/entry.html
@@ -5,21 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer-when-downgrade">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
     <script src="entry.js" ></script> 
     <title>Update Data Form</title>
 </head>
 
 <body>
-    <h1>Update Data</h1>
+    <h1>Add Food Data</h1>
     <form id="updateForm"> 
-        <label for="meal">Meal:</label> <input type="text" id="meal" name="meal" required><br><br> 
-        <label for="calorie_Count">Calorie Count:</label> <input type="number" id="calorie_Count" name="calorie_Count" required><br><br> 
-        <!-- Hidden date field --> 
-         <input type="hidden" id="date" name="date"> 
-         <label for="meal_Description">Meal Description:</label> <textarea id="meal_Description" name="meal_Description"  required></textarea><br><br> 
-         <button type="submit">Submit</button> </form>
-   
+        <div class="form-group">
+            <label for="meal">Meal:</label> 
+            <input class="form-control form-control-sm" type="text" id="meal" name="meal" required>
+        </div>
+        <div class="form-group"></div>
+            <label for="calorie_Count">Calorie Count:</label> 
+            <input class="form-control form-control-sm" type="number" id="calorie_Count" name="calorie_Count" required>
+        </div>
+        <div class="form-group">
+            <input type="hidden" id="date" name="date"> 
+        </div>
+        <div class="form-group">
+            <label for="meal_Description">Meal Description:</label> 
+            <textarea class="form-control form-control-sm" id="meal_Description" name="meal_Description"  required></textarea>
+         </div>    
+            <button class="btn btn-primary" type="submit">Submit</button>
+        
+    </form>
+    <script> 
+    
+    </script>
 </body>
 
 </html>
