--- a/Index.html
+++ b/Index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Data Table</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="main.js" ></script> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 
 <body>
     <h1>Data Table</h1>
-    <table border="1">
+    <table class="table">
         <thead>
             <tr>
                 <th>Meal</th>
@@ -21,9 +21,22 @@
         </thead>
         <tbody id="data-table"> </tbody>
     </table>
-    <!-- <script> $(document).ready(function () 
-    { $.getJSON('/api/data', function (data) { var rows = ''; $.each(data, function (index, item) { rows += '<tr>'; rows += '<td>' + item.key + '</td>'; rows += '<td>' + item.value + '</td>'; rows += '</tr>'; }); $('#data-table').html(rows); }); }); 
-    </script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.getJSON('/api/data', function (data) {
+                var rows = '';
+                $.each(data, function (index, item) {
+                    rows += '<tr>';
+                    rows += '<td>' + item.key + '</td>';
+                    rows += '<td>' + item.value + '</td>';
+                    rows += '</tr>';
+                });
+                $('#data-table').html(rows);
+            });
+        });
+    </script>
 </body>
 
 </html>
