--- a/exercise.html
+++ b/exercise.html
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-    <h1>Update Data</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.Html">Home</a>
+        <a class="navbar-brand" href="graph.Html">Graph</a>
+        <a class="navbar-brand" href="entry.Html">Entry</a>
+    </nav>
+    <h1>Exercise Data</h1>
     <form id="updateForm"> 
         <div class="form-group">
             <label for="Exercise">Exercise:</label> 
