--- a/graph.html
+++ b/graph.html
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.Html">Home</a>
+        <a class="navbar-brand" href="exercise.Html">Exercise</a>
+        <a class="navbar-brand" href="entry.Html">Entry</a>
+    </nav>
     <h1>Graph Data</h1>
     <div>
         <div id="chart-container"> 
@@ -26,7 +31,6 @@
         <script>
             var dataObject = {}
             var dates = new Set();
-            var dayCals = new Set();
             var sums = {
                 'lunch': 0,
                 'evening': 0,
@@ -43,7 +47,7 @@
                         //console.log(dataObject); 
                         dataReady = true;
                         processData();
-                        fnMakeCalCountSetsPerDay(dataObject, dayCals, dates)
+                        fnMakeCalCountSetsPerDay(dataObject, dates)
 
                         console.log(dates);
                     })
@@ -100,7 +104,7 @@
                 }
             }
 
-            function fnMakeCalCountSetsPerDay(dataObject, dayCals, days) {
+            function fnMakeCalCountSetsPerDay(dataObject, days) {
                 let dayCalorieMap = new Map(); 
                 // Initialize map with dates and zero calorie counts 
                 for (let day of days) 
