--- a/entry.html
+++ b/entry.html
@@ -40,7 +40,7 @@
             <textarea class="form-control form-control-sm" id="meal_Description" name="meal_Description"  required></textarea>
          </div>   
         </br> 
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <button class="btn btn-primary" id="entryB" type="submit">Submit</button>
         
     </form>
     </br>
