--- a/exercise.html
+++ b/exercise.html
@@ -38,7 +38,7 @@
             <input class="form-control form-control-sm"  type="number" id="Time_taken" name="Time_taken"  required></input>
         </div>
     </br>
-            <button class="btn btn-primary" type="submit">Submit</button> 
+            <button class="btn btn-primary" id="exAddB" type="submit">Submit</button> 
         </form>
     <script> 
     
