--- a/graph.html
+++ b/graph.html
@@ -22,6 +22,8 @@
         <a class="navbar-brand" href="index.Html">Home</a>
         <a class="navbar-brand" href="exercise.Html">Exercise</a>
         <a class="navbar-brand" href="entry.Html">Entry</a>
+        <a class="navbar-brand" href="foodupdate.Html">Food Update</a>
+        <a class="navbar-brand" href="exerciseupdate.Html">Exercise Update</a>
     </nav>
     <h1>Graph Data</h1>
     <div>
