--- a/entry.html
+++ b/entry.html
@@ -21,6 +21,8 @@
         <a class="navbar-brand" href="index.Html">Home</a>
         <a class="navbar-brand" href="graph.Html">Graph</a>
         <a class="navbar-brand" href="exercise.Html">Exercise</a>
+        <a class="navbar-brand" href="foodupdate.Html">Food Update</a>
+        <a class="navbar-brand" href="exerciseupdate.Html">Exercise Update</a>
     </nav>
     <h1>Add Food Data</h1>
     <form id="updateForm"> 
