--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="AjaxUtility.js" ></script> 
     <script src="main.js" ></script> 
+
 </head>
 
 <body>
