--- a/exercise.html
+++ b/exercise.html
@@ -12,6 +12,9 @@
    
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
     <script src="exercise.js" ></script> 
+    <script src="Validator.JS" ></script>
+    <script src="Utility.js">   </script>
+    <script src="AjaxUtility.js">   </script>
     <title>Update Data Form</title>
 </head>
 
