--- a/public/exerciseupdate.Html
+++ b/public/exerciseupdate.Html
@@ -12,8 +12,11 @@
     <script src="https://cdn.jsdelivr.net/npm/date-fns@2.21.1/dist/date-fns.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="Validator.JS" ></script> 
+    <script src="Utility.js">   </script>
+    <script src="AjaxUtility.js" ></script>
     <script src="exerciseupdate.js" ></script> 
-    <script src="Validator.JS" ></script>
+    
     <title>Update Data Form</title>
 </head>
 
