--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <a class="navbar-brand" href="graph.Html">Graph</a>
         <a class="navbar-brand" href="exercise.Html">Exercise</a>
         <a class="navbar-brand" href="foodupdate.Html">Food Update</a>
-        <a class="navbar-brand" href="exerciseupdate.Html">Food Update</a>
+        <a class="navbar-brand" href="exerciseupdate.Html">Exercise Update</a>
     </nav>
     <h1>Data Table</h1>
     <table class="table table-striped table-light">
